Fixed rendering on small devices on the header.css

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,6 +1,6 @@
 header {
   height: 100vh;
-  padding-top: 7rem;
+  padding-top: 5vh;
   overflow: hidden;
 }
 
@@ -41,20 +41,20 @@ header {
 /* me */
 .me {
   background: linear-gradient(var(--color-primary), transparent);
-  width: 20rem;
-  height: 20rem;
+  width: 40vh;
+  height: 40vh;
   position: absolute;
-  left: calc(50% - 10rem);
+  left: calc(50% - 20vh);
   margin-top: 4rem;
   border-radius: 50%;
   overflow: hidden;
-  padding: 1.5rem 1.5rem 1.5rem 1.5rem;
+  padding: 2.5vh 2.5vh 2.5vh 2.5vh;
 }
 
 .avatar {
   vertical-align: auto;
-  width: 17rem;
-  height: 17rem;
+  width: 35vh;
+  height: 35vh;
   border-radius: 50%;
 }
 
@@ -72,21 +72,29 @@ header {
 /* Media Queries (medium devices) */
 
 @media (max-width: 1024px) {
-  header {
-    padding-top: 5rem;
-    height: 120vh;
-  }
 }
 
 /* Media Queries (small devices) */
 
 @media (max-width: 600px) {
-  header {
-    padding-top: 2rem;
-    height: 120vh;
-  }
   .header__socials,
   .scroll__down {
     display: none;
+  }
+}
+
+@media (max-width: 390px) {
+  .me {
+    width: 30vh;
+    height: 30vh;
+    left: calc(50% - 15vh);
+    padding: 1.875vh 1.875vh 1.875vh 1.875vh ;
+  }
+
+  .avatar {
+    vertical-align: auto;
+    width: 26.25vh;
+    height: 26.25vh;
+    border-radius: 50%;
   }
 }
